--- a/application.yml
+++ b/application.yml
@@ -24,9 +24,12 @@ logging.level.org.springframework: INFO
 
 # OAuth2 security
 security:
+  basic:
+    enabled: false
   oauth2:
     client:
-      client-id: 0oaew1oj7oKqubpnZ0h7
+      client-id: 0oaew74x60uzkjBcI0h7
+      client-secret: ZVFK15ZIKX22VCXdCwy5QrRGdQUJhC_xbRGFLp4Q 
       access-token-uri: https://dev-154532.oktapreview.com/oauth2/default/v1/token
       user-authorization-uri: https://dev-154532.oktapreview.com/oauth2/default/v1/authorize
       scope: openid profile email
