--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,3 +1,8 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
 zuul:
   prefix: /api
   ignoredServices: '*'
@@ -22,6 +27,7 @@ spring:
   profiles: docker
   zipkin:
     baseUrl: http://tracing-server:9411
+
 eureka:
   client:
     serviceUrl:
