--- a/application.yml
+++ b/application.yml
@@ -4,7 +4,9 @@
 server.port: 0
 
 # database init, supports mysql too
-petclinic.database: hsqldb
+petclinic:
+  database: hsqldb
+
 spring:
   datasource:
     schema: classpath*:db/${petclinic.database}/schema.sql
@@ -12,9 +14,15 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0
-
-# JPA
-spring.jpa.hibernate.ddl-auto: none
+  jpa:
+    hibernate:
+      ddl-auto: none
+      show_sql: true
+      use_sql_comments: true
+      format_sql: true
+    properties:
+      hibernate:
+        type: trace
 
 # Spring Boot 1.5 makes actuator secure by default
 management:
