--- a/application.yml
+++ b/application.yml
@@ -16,7 +16,7 @@ spring:
       percentage: 1.0
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
       show_sql: true
       use_sql_comments: true
       format_sql: true
